--- a/calculadora.html
+++ b/calculadora.html
@@ -3,23 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600&display=swap" rel="stylesheet">
     <title>Calculadora js</title>
+    
+    <style>
+        h1{font-size: 50px;}
+        p{font-size: 20px;
+         margin-bottom: 10px;
+        }
+        body{
+            font-family: 'Quicksand', sans-serif;
+justify-content: center;
+align-items: center;
+            display: flex;
+            background-color: #e8c48d;
+        }
+.container{
+    width: 36%;
+margin-top: 40px;
+text-align: center;
+justify-content: center;
+align-items: center;
+background-color: #dae1b6;
+padding: 19px;
+border-radius: 10px;
+border-top: 5px solid rgb(164, 164, 164);
+border-bottom: 5px solid rgb(164, 164, 164);
+}
+button {
+    margin-left: 10px;
+    border-radius: 10px;
+    background-color: #c3fab0       ;
+    width: 100px;
+    height: 40px; 
+}
+.abutton {
+margin-top: 10px;
+    border-radius: 10px;
+    background-color: #b695ea;
+    width: 80%;
+    height: 40px;
+    font-size: medium;
+} 
+button:hover{
+background-color: #96c8818e;
+
+}
+.label{
+width: 90%;
+height: 50px;
+border-radius:  10px;
+border: none;
+margin-bottom: 40px;
+border: 1px solid #eee;
+font-size: large;
+
+}
+.label:hover{
+    background-color: #bfd4ed;
+    border: 1px solid #6e7987;
+}
+
+
+    </style>
 </head>
 <body>
     <div class="container">
         <h1> Calculadora</h1>
-        <input type="text" name="" id="num1"> 
+        <p> Area para el primer Campo</p>
+        <input type="text" name="" id="num1" class="label"> 
         <br>
-        <input type="text" name="" id="num2">
+        <p> Area para el segundo Campo</p>
+        <input type="text" name="" id="num2" class="label">
         <br>
-        <input type="text" name="" id="result">
-
+        <p>Tu resultado es: </p>
+        <input type="text" name="" id="result" class="label" disabled>
+<br>
         <br>
-        <button onclick="sumar()">Sumar</button>
-        <button onclick="restar()">Restar</button>
-        <button onclick="multiplicar()">Multiplicar</button>
-        <button onclick="dividir ()">Dividir</button>
-        <button onclick="limpiar()">Limpiar</button>
+        <button onclick="sumar()" class="button">Sumar</button>
+        <button onclick="restar()" class="button">Restar</button>
+        <button onclick="multiplicar()" class="button">Multiplicar</button>
+        <button onclick="dividir ()" class="button">Dividir</button>
+        <br>
+        <button onclick="limpiar()" class="abutton">Limpiar</button>
     </div>
     <script src="./calculadora.js"></script>
 </body>
